--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="gif_container">
-            <img src="https://gifdb.com/images/high/cute-cat-cat-cute-gif-tygptlrtyt38m4gx.gif" alt="Cute GIF">
+            <img src="https://gifdb.com/images/high/cute-cat-cat-cute-gif-tygptlrtyt38m4gx.gif">
         </div>
         <h1>my love will you be my Valentine ?</h1>
         <div class="buttons">
