--- a/yes_page.html
+++ b/yes_page.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 class="header_text">Knew you would say yes hehe!</h1>
         <div class="gif_container">
-            <img src="https://media.gifdb.com/besos-hugs-peach-and-goma-ojjko7wrqnl1aee7.gif"> 
+            <img src="https://gifdb.com/images/high/besos-hugs-peach-and-goma-ojjko7wrqnl1aee7.webp"> 
         </div>
     </div>
 </body>
