--- a/yes_page.html
+++ b/yes_page.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knew you would say yes hehe!</title>
+    <title>Je savais que tu avais un crush sur moi hehe!</title>
     <link rel="stylesheet" href="./yes_style.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">Knew you would say yes hehe!</h1>
+        <h1 class="header_text">Je savais que tu avais un crush sur moi hehe!</h1>
         <div class="gif_container">
             <img src="https://gifdb.com/images/high/besos-hugs-peach-and-goma-ojjko7wrqnl1aee7.webp"> 
         </div>
